recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  for (k <- 0 to 3){
    carre()
    retourne()
  }
  
}


def carre() {
  for (j<- 0 to 3) {
    for (i <- 0 to 99){
      avance()
    }
    droite
  }
}